<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/name_edit_text"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/description"
            app:layout_constraintStart_toEndOf="@id/nameEditText"
            app:layout_constraintTop_toBottomOf="@id/nameEditText" />

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintStart_toEndOf="@id/descriptionEditText"
            app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintStart_toEndOf="@id/prioritySpinner"
            app:layout_constraintTop_toBottomOf="@id/prioritySpinner">

            <RadioButton
                android:id="@+id/goodRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_habit" />

            <RadioButton
                android:id="@+id/badRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad_habit" />
        </RadioGroup>


        <TextView
            android:id="@+id/labelForCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_for_count"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/countOfRepeats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeRadioGroup" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/countOfRepeats"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/labelForCount"
            app:layout_constraintTop_toBottomOf="@id/typeRadioGroup"
            android:hint="@string/hint_for_count_of_repeats" />


        <TextView
            android:id="@+id/labelForDays"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/frequency"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/daysForHabit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countOfRepeats" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/daysForHabit"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/countOfRepeats"
            app:layout_constraintTop_toBottomOf="@id/countOfRepeats"
            android:hint="@string/hint_for_days_habit"/>


        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="@id/daysForHabit"
            app:layout_constraintTop_toBottomOf="@id/daysForHabit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>